feat: Refatorar Setor da Ação para uma tabela em separado
